mobile without header and footer
first section: text and background not OK

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     </head>
 
     <body>
-
-<header class="header">
+<!--<header class="header">
     <div class="container header-inner">
              <nav class="header-nav">
                 <a class="logo" href="./index.html">Web<span class="studio">Studio</span></a>
@@ -31,7 +30,7 @@
             </ul>   
             </address>
     </div>  
-</header>
+</header>-->
 
 <main>
 <section class="section-one">
@@ -46,33 +45,36 @@
         <h2 class="visually-hidden">Our Benefits</h2>
         <ul class="our-benefits-list">
             <li class="our-benefits-list-items">
+                <div class="simply-try">
                 <div class="box-our-benefits"><svg class="svg-item" width="64" height="64">
                     <use href="./images/icons.svg#icon-antenna-1"></use>
-                </svg></div>
+                </svg></div></div>
                 <h3 class="our-benefits">Strategy</h3>
                     <p class="text">Our goal is to identify the business
                     problem to walk away with the perfect and creative solution.</p>
             </li>
             <li  class="our-benefits-list-items">
+                <div class="simply-try">
                 <div  class="box-our-benefits">
                 <svg class="svg-item" width="64" height="64">
                     <use href="./images/icons.svg#icon-clock-1"></use>
-                </svg></div>
+                </svg></div></div>
                 <h3 class="our-benefits">Punctuality</h3>
                     <p class="text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
             </li>
             <li  class="our-benefits-list-items">
+                <div class="simply-try">
                 <div  class="box-our-benefits">
                 <svg class="svg-item" width="64" height="64">
                     <use href="./images/icons.svg#icon-diagram-1"></use>
-                </svg></div>
+                </svg></div></div>
                 <h3 class="our-benefits">Diligence</h3>
                     <p class="text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
             </li>
-            <li  class="our-benefits-list-items"><div  class="box-our-benefits">
+            <li  class="our-benefits-list-items"><div class="simply-try">
                 <svg class="svg-item" width="64" height="64">
                     <use href="./images/icons.svg#icon-astronaut-1"></use>
-                </svg></div>
+                </svg></div></div>
                 <h3 class="our-benefits">Technologies</h3>
                     <p class="text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
             </li>
@@ -212,7 +214,7 @@
 
 </main>
 
-<footer class="footer">
+<!--<footer class="footer">
     <div class="container footer-container">
             <div class="footer-text">
                 <a class="logo" href="./index.html">Web<span class="studio">Studio</span></a>
@@ -248,9 +250,9 @@
                 </form>
             </div>
         </div>
-</footer>
+</footer>-->
 <!--Modal window-->
-<div class="backdrop is-open is-hidden" data-modal>
+<!--<div class="backdrop is-open is-hidden" data-modal>
     <div class="modal">
         <button class="modal-close" type="button" data-modal-close>
             <svg class="close-icon" width="8" height="8">
@@ -303,7 +305,7 @@
             </div>
                 <button class="send-button" type="submit">Send</button>
             </form>   
-    </div>
+    </div>-->
 </div>
     </body>
 </html>
