HW 6 Start mobile

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </head>
 
     <body>
-<!--<header class="header">
+<header class="header">
     <div class="container header-inner">
              <nav class="header-nav">
                 <a class="logo" href="./index.html">Web<span class="studio">Studio</span></a>
@@ -30,8 +30,13 @@
                 <li><a class="address-list" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>   
             </address>
+            <button class="header-menu-button menu-toggle">
+                <svg class="menu-toggle-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-heroicons-solid_menu"></use>
+                </svg>
+            </button>    
     </div>  
-</header>-->
+</header>
 
 <main>
 <section class="section-one">
@@ -313,6 +318,37 @@
                 <button class="send-button" type="submit">Send</button>
             </form>   
     </div>-->
+</div>
+<!--Mobile menu-->
+<div class="menu-container">
+    <button class="mobile-menu-button" type="button" data-modal-close>
+        <svg class="close-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
+        </svg>
+    </button>
+    <ul class="mobile-menu-list">
+        <li class="mobile-menu-items"><a class="mobile-menu-link" href="./index.html">Studio</a></li>
+       <li class="mobile-menu-items"><a class="mobile-menu-link" href="">Portfolio</a></li>
+       <li class="mobile-menu-items"><a class="mobile-menu-link" href="">Contacts</a></li>
+   </ul>
+   <ul class="mobile-contacts">
+    <li class="mobile-contacts-item"><a class="mobile-contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+    <li class="mobile-contacts-item"><a class="mobile-contacts-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+</ul> 
+<ul class="mobile-socials">
+    <li class="mobile-socials-item"><a class="mobile-socials-link link" href="instagram.com" target="_blank"><svg class="media-icons" width="24" height="24">
+        <use href="./images/icons.svg#icon-instagram-2"></use>
+    </svg></a></li>
+    <li class="mobile-socials-item"><a class="mobile-socials-link link" href="instagram.com" target="_blank"><svg class="media-icons" width="24" height="24">
+        <use href="./images/icons.svg#icon-twitter-1"></use>
+    </svg></a></li>
+    <li class="mobile-socials-item"><a class="mobile-socials-link link" href="instagram.com" target="_blank"><svg class="media-icons" width="24" height="24">
+        <use href="./images/icons.svg#icon-facebook-1"></use>
+    </svg></a></li>
+    <li class="mobile-socials-item"><a class="mobile-socials-link link" href="instagram.com" target="_blank"><svg class="media-icons" width="24" height="24">
+        <use href="./images/icons.svg#icon-linkedin-1"></use>
+    </svg></a></li>
+</ul>  
 </div>
     </body>
 </html>
