--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
     <div class="container">
         <h2 class="our-team-title">Our Team</h2>
         <ul class="our-team-list">
-            <li class="our-team-list-items"><img src="./images/img.jpg" alt="Mark Guerrero" 
+            <li class="our-team-list-items">
+                <img srcset="./images/img.jpg, ./images/img@2x.jpg" 
+                src="./images/img.jpg" alt="Mark Guerrero" 
                 width="264" 
                 height="260" /><div class="our-team-names">
                     <h3 class="our-people">Mark Guerrero</h3>
@@ -119,7 +121,9 @@
                     </ul>
                     </div>
                 </li>
-            <li class="our-team-list-items"><img src="./images/img1.jpg" alt="Tom Ford" 
+            <li class="our-team-list-items">
+                <img srcset="./images/img1.jpg, ./images/img1@2x.jpg"
+                src="./images/img1.jpg" alt="Tom Ford" 
                 width="264" 
                 height="260"/><div class="our-team-names">
                     <h3 class="our-people">Tom Ford</h3>
@@ -144,7 +148,9 @@
                     </ul>
                     </div>  
             </li>
-            <li class="our-team-list-items"><img src="./images/img2.jpg" alt="Camila Garcia" 
+            <li class="our-team-list-items">
+                <img srcset="./images/img2.jpg, ./images/img2@2x.jpg" 
+                src="./images/img2.jpg" alt="Camila Garcia" 
                 width="264" 
                 height="260"/><div class="our-team-names">
                     <h3 class="our-people">Camila Garcia</h3>
@@ -169,7 +175,9 @@
                         </ul>
                     </div>
                     </li>
-            <li class="our-team-list-items"><img src="./images/img3.jpg" alt="Daniel Wilson" 
+            <li class="our-team-list-items">
+                <img srcset="./images/img3.jpg, ./images/img3@2x.jpg" 
+                src="./images/img3.jpg" alt="Daniel Wilson" 
                 width="264" 
                 height="260"/><div class="our-team-names">
                     <h3 class="our-people">Daniel Wilson</h3>
@@ -202,22 +210,61 @@
     <div class="container">
         <h2 class="our-portfolio-title">Our Portfolio</h2>
         <ul class="our-portfolio-list">
-            <li class="our-portfolio-items"><div class="our-portfolio-box"><img src="./images/Banking.jpg" alt="Banking App" width="360" height="300"><p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
+            <li class="our-portfolio-items"><div class="our-portfolio-box">
+                <picture>
+                    <source media="(min-width: 768px)" srcset="./images/tabBanking.jpg, ./images/tabBanking@2x.jpg">
+                    <source media="(min-width: 1158px)" srcset="./images/Banking.jpg, ./images/Banking@2x.jpg">
+                    <source media="(max-width: 767px)" srcset="./images/mobBanking.jpg, ./images/mobBanking@2x.jpg">
+                    <img src="./images/Banking.jpg" alt="Banking App" width="360" height="300">
+                </picture>
+                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
                 <div class="our-portfolio-names"><h3 class="our-portfolio-list-item">Banking App</h3>
             <p class="text">App</p></div> </li>
-            <li class="our-portfolio-items"><div class="our-portfolio-box"><img src="./images/Payment.jpg" alt="Cahless Payment" width="360" height="300"><p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
+            <li class="our-portfolio-items"><div class="our-portfolio-box">
+                <picture>
+                    <source media="(min-width: 768px)" srcset="./images/tabPayment.jpg, ./images/tabPayment@2x.jpg">
+                    <source media="(min-width: 1158px)" srcset="./images/Payment.jpg, ./images/Payment@2x.jpg">
+                    <source media="(max-width: 767px)" srcset="./images/mobPayment.jpg, ./images/mobPayment@2x.jpg">
+                    <img src="./images/Payment.jpg" alt="Cahless Payment" width="360" height="300">
+               </picture>
+                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
                 <div class="our-portfolio-names"><h3 class="our-portfolio-list-item">Cashless Payment</h3>
             <p class="text">Marketing</p></div></li>
-            <li class="our-portfolio-items"><div class="our-portfolio-box"><img src="./images/Meditation.jpg" alt="Meditation App" width="360" height="300"><p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
-                <div class="our-portfolio-names"><h3 class="our-portfolio-list-item">Meditation App</h3>
+            <li class="our-portfolio-items"><div class="our-portfolio-box">
+                <picture>
+                    <source media="(min-width: 768px)" srcset="./images/tabMeditation.jpg, ./images/tabMeditation@2x.jpg">
+                    <source media="(min-width: 1158px)" srcset="./images/Meditation.jpg, ./images/Meditation@2x.jpg">
+                    <source media="(max-width: 767px)" srcset="./images/mobMeditation.jpg, ./images/mobMeditation@2x.jpg">
+                    <img src="./images/Meditation.jpg" alt="Meditation App" width="360" height="300"><p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
+                </picture>
+                    <div class="our-portfolio-names"><h3 class="our-portfolio-list-item">Meditation App</h3>
             <p class="text">App</p></div></li>
-            <li class="our-portfolio-items"><div class="our-portfolio-box"><img src="./images/Taxi.jpg" alt="Taxi Service" width="360" height="300"><p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
+            <li class="our-portfolio-items"><div class="our-portfolio-box">
+                <picture>
+                    <source media="(min-width: 768px)" srcset="./images/tabTaxi.jpg, ./images/tabTaxi@2x.jpg">
+                    <source media="(min-width: 1158px)" srcset="./images/Taxi.jpg, ./images/Taxi@2x.jpg">
+                    <source media="(max-width: 767px)" srcset="./images/mobTaxi.jpg, ./images/mobTaxi@2x.jpg">
+                    <img src="./images/Taxi.jpg" alt="Taxi Service" width="360" height="300"><p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
+                </picture>
                 <div class="our-portfolio-names"><h3 class="our-portfolio-list-item">Taxi Service</h3>
             <p class="text">Marketing</p></div></li>
-            <li class="our-portfolio-items"><div class="our-portfolio-box"><img src="./images/Screen.jpg" alt="Screen Illustrations" width="360" height="300"><p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
-                <div class="our-portfolio-names"><h3 class="our-portfolio-list-item">Screen Illustrations</h3>
+            <li class="our-portfolio-items"><div class="our-portfolio-box">
+                <picture>
+                    <source media="(min-width: 768px)" srcset="./images/tabScreen.jpg, ./images/tabScreen@2x.jpg">
+                    <source media="(min-width: 1158px)" srcset="./images/Screen.jpg, ./images/Screen@2x.jpg">
+                    <source media="(max-width: 767px)" srcset="./images/mobScreen.jpg, ./images/mobScreen@2x.jpg">
+                    <img src="./images/Screen.jpg" alt="Screen Illustrations" width="360" height="300"><p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
+                </picture>
+                    <div class="our-portfolio-names"><h3 class="our-portfolio-list-item">Screen Illustrations</h3>
             <p class="text">Design</p></div></li>
-            <li class="our-portfolio-items"><div class="our-portfolio-box"><img src="./images/Courses.jpg" alt="Online Courses" width="360" height="300"><p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
+            <li class="our-portfolio-items"><div class="our-portfolio-box">
+                <picture>
+                    <source media="(min-width: 768px)" srcset="./images/tabCourses.jpg, ./images/tabCourses@2x.jpg">
+                    <source media="(min-width: 1158px)" srcset="./images/Courses.jpg, ./images/Courses@2x.jpg">
+                    <source media="(max-width: 767px)" srcset="./images/mobCourses.jpg, ./images/mobCourses@2x.jpg">
+                    <img src="./images/Courses.jpg" alt="Online Courses" width="360" height="300">
+                </picture>
+                    <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
                 <div class="our-portfolio-names"><h3 class="our-portfolio-list-item">Online Courses</h3>
             <p class="text">Marketing</p></div></li>
         </ul>
@@ -226,12 +273,12 @@
 
 </main>
 
-<!--<footer class="footer">
+<footer class="footer">
     <div class="container footer-container">
-            <div class="footer-text">
-                <a class="logo" href="./index.html">Web<span class="studio">Studio</span></a>
+            <div class="footer-text-container">
+                <a class="logo footer-logo" href="./index.html">Web<span class="studio">Studio</span></a>
                 <p class="text footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-        </div>
+            </div>
             <div class="footer-icons"> 
                     <p class="social-media-text">Social media</p>
                 <ul class="social-media">
@@ -262,9 +309,9 @@
                 </form>
             </div>
         </div>
-</footer>-->
+</footer>
 <!--Modal window-->
-<!--<div class="backdrop is-open is-hidden" data-modal>
+<div class="backdrop is-open is-hidden" data-modal>
     <div class="modal">
         <button class="modal-close" type="button" data-modal-close>
             <svg class="close-icon" width="8" height="8">
@@ -317,7 +364,7 @@
             </div>
                 <button class="send-button" type="submit">Send</button>
             </form>   
-    </div>-->
+    </div>
 </div>
 <!--Mobile menu-->
 <div class="menu-container">
@@ -326,26 +373,26 @@
             <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
         </svg>
     </button>
-    <ul class="mobile-menu-list">
-        <li class="mobile-menu-items"><a class="mobile-menu-link" href="./index.html">Studio</a></li>
-       <li class="mobile-menu-items"><a class="mobile-menu-link" href="">Portfolio</a></li>
-       <li class="mobile-menu-items"><a class="mobile-menu-link" href="">Contacts</a></li>
+    <ul class="mobile-menu-list list">
+        <li class="mobile-menu-items"><a class="mobile-menu-link link current" href="./index.html">Studio</a></li>
+       <li class="mobile-menu-items"><a class="mobile-menu-link link" href="">Portfolio</a></li>
+       <li class="mobile-menu-items"><a class="mobile-menu-link link" href="">Contacts</a></li>
    </ul>
-   <ul class="mobile-contacts">
-    <li class="mobile-contacts-item"><a class="mobile-contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-    <li class="mobile-contacts-item"><a class="mobile-contacts-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+   <ul class="mobile-contacts list">
+    <li class="mobile-contacts-item"><a class="mobile-contacts-link accent link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+    <li class="mobile-contacts-item"><a class="mobile-contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
 </ul> 
-<ul class="mobile-socials">
-    <li class="mobile-socials-item"><a class="mobile-socials-link link" href="instagram.com" target="_blank"><svg class="media-icons" width="24" height="24">
-        <use href="./images/icons.svg#icon-instagram-2"></use>
-    </svg></a></li>
-    <li class="mobile-socials-item"><a class="mobile-socials-link link" href="instagram.com" target="_blank"><svg class="media-icons" width="24" height="24">
+<ul class="mobile-socials list">
+    <li class="mobile-socials-item"><a class="mobile-socials-link link" href="instagram.com" target="_blank">
+        <svg class="mobile-social-icons" width="24" height="24">
+        <use href="./images/icons.svg#icon-instagram-2"></use></svg></a></li>
+    <li class="mobile-socials-item"><a class="mobile-socials-link link" href="instagram.com" target="_blank"><svg class="mobile-social-icons" width="24" height="24">
         <use href="./images/icons.svg#icon-twitter-1"></use>
     </svg></a></li>
-    <li class="mobile-socials-item"><a class="mobile-socials-link link" href="instagram.com" target="_blank"><svg class="media-icons" width="24" height="24">
+    <li class="mobile-socials-item"><a class="mobile-socials-link link" href="instagram.com" target="_blank"><svg class="mobile-social-icons" width="24" height="24">
         <use href="./images/icons.svg#icon-facebook-1"></use>
     </svg></a></li>
-    <li class="mobile-socials-item"><a class="mobile-socials-link link" href="instagram.com" target="_blank"><svg class="media-icons" width="24" height="24">
+    <li class="mobile-socials-item"><a class="mobile-socials-link link" href="instagram.com" target="_blank"><svg class="mobile-social-icons" width="24" height="24">
         <use href="./images/icons.svg#icon-linkedin-1"></use>
     </svg></a></li>
 </ul>  
