--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <header class="header">
     <div class="container header-inner">
              <nav class="header-nav">
-                <a class="logo" href="./index.html">Web<span class="studio">Studio</span></a>
+                <a class="logo header-logo" href="./index.html">Web<span class="studio">Studio</span></a>
                  <ul class="header-nav-list">
                      <li><a class="nav-list current" href="./index.html">Studio</a></li>
                     <li><a class="nav-list" href="">Portfolio</a></li>
